--- a/styles/style.css
+++ b/styles/style.css
@@ -94,3 +94,34 @@
     height: 54px;
     margin: 0 auto;
 }
+
+.cards img{
+    width: 270px;
+    height: 322px;
+}
+.card-discription{
+    width: 132px;
+    height: 52px;
+    margin: 0 auto;
+}
+.card-discription h4{
+    color: #111111;
+    font-size: 22px;
+    line-height: 150%;
+    font-family: "Inter", sans-serif;
+    font-weight: 600;
+
+}
+.card-discription h3{
+    color: #111111;
+    font-size: 22px;
+    line-height: 150%;
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+
+}
+.card-container button{
+    width: 270px;
+    background-color: #E95A08;
+    color: #FFFFFF;
+}
