--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@
     color: rgba(0, 0, 0, 0.5) !important;
     font-size: 22px !important;
     font-family: "Inter", sans-serif;
+
 }
 
 .heading-style {
@@ -197,4 +198,12 @@
         transform: rotate(360deg);
     }
 
+}
+
+.bg-contents h4{
+    margin-top: 50px;
+}
+.bg-contents h5{
+    margin-top: 56px;
+   
 }
